[package]
name = "cake"
version = "0.2.0"
authors = ["Sandeep Bhardwaj <sb23007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
log = "0.4.14"
env_logger = "0.8.3"
tar="0.4.35"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"

[profile.release]
lto = true
